IaC/frontend/concilia_frontend/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: concilia-frontend
  labels:
    app: concilia-frontend
    app.kubernetes.io/name: concilia-frontend
    app.kubernetes.io/part-of: frontend
spec:
  selector:
    app: concilia-frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
